[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Levels/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://assets/Objects/TutorialSlide.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/SoundEffects/game_start.mp3" type="AudioStream" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="TutorialSlide1" parent="." instance=ExtResource( 2 )]

[node name="TutorialSlide2" parent="." instance=ExtResource( 2 )]

[node name="Sprite" parent="TutorialSlide2" index="0"]
rotation = 0.109088

[node name="AnimatedSprite" parent="TutorialSlide2/Sprite" index="0"]
frame = 1

[node name="ExitTimer" parent="TutorialSlide2" index="1"]
wait_time = 0.1

[node name="TutorialSlide3" parent="." instance=ExtResource( 2 )]

[node name="Sprite" parent="TutorialSlide3" index="0"]
rotation = -0.0171227

[node name="AnimatedSprite" parent="TutorialSlide3/Sprite" index="0"]
frame = 2

[node name="ExitTimer" parent="TutorialSlide3" index="1"]
wait_time = 0.05

[node name="Button" type="Button" parent="."]
margin_left = -60.0
margin_top = -45.0
margin_right = 1340.0
margin_bottom = 786.0
mouse_default_cursor_shape = 2
custom_styles/focus = SubResource( 1 )
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]

[editable path="TutorialSlide1"]
[editable path="TutorialSlide2"]
[editable path="TutorialSlide3"]
